
2004-08-11  Ulrich Drepper  <drepper@redhat.com>

	* time/tzset.c (tzset_internal): Add new parameter which is
	nonzero if called through tzset.  Use TZDEFAULT name including
	name comparison if the new parameter is zero.  This means implicit
	tzset calls will not cause files to be opened and read by tzfile.c
	all the time.

2004-08-11  Jakub Jelinek  <jakub@redhat.com>

	* time/tzfile.c (__tzfile_read): Free transitions only if it will
	not be reused.

2004-08-11  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/ieee754/dbl-64/mpa.c: Include <sys/param.h>.
	* sysdeps/ieee754/dbl-64/mpa.h (MAX, MIN): Macros removed.

	* stdio-common/tst-popen.c: Include <string.h>.

	* resolv/res_send.c (__libc_res_nsend): Only define TMPBUF #if DEBUG.

	* sysdeps/pthread/aio_misc.c (handle_fildes_io): Remove noreturn
	attribute.  Return NULL instead of calling pthread_exit at the end.

2004-08-11  Roland McGrath  <roland@redhat.com>

	* iconvdata/testdata/ISO-2022-JP-3: Regenerated.

2004-08-10  Alfred M. Szmidt  <ams@kemisten.nu>

	* sysdeps/generic/bits/in.h (struct ip_mreq): Remove definition.

2004-08-10  Jakub Jelinek  <jakub@redhat.com>

	* libio/bits/stdio.h (fread_unlocked): Cast 0 to (size_t).
	(fwrite_unlocked): When checking if size * n is <= 8, cast each
	argument to size_t individually.  Cast n to (void) instead of
	(size_t), surround with (), return (size_t) 0 if one of n or size
	is 0.  [BZ #316]
	* stdio-common/Makefile (tests): Add tst-unlockedio.
	* stdio-common/tst-unlockedio.c: New test.

2004-08-09  Roland McGrath  <roland@frob.com>

	* manual/install.texi (Supported Configurations): Replace bug-glibc
	mention with web URL.
	* INSTALL: Regenerated.
	* locale/iso-3166.def: Likewise, in comment.
	* locale/iso-4217.def: Likewise.
	* locale/iso-639.def: Likewise.
	* posix/cpio.h: Remove bug reporting comment.

2004-08-09  Ulrich Drepper  <drepper@redhat.com>

	* libio/bits/stdio.h (fread_unlocked): Add a couple of (size_t)